--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 10%;
   height: 100%;
-  background-color: #333;
+  background-color: #283044;
   color: #fff;
   padding: 20px;
 }
@@ -12,24 +12,24 @@
 .left-navbar ul {
   list-style: none;
   padding: 0;
-  margin: 0; /* Remove the default margin */
+  margin: 0;
 }
 
 .navbar-selection {
   display: flex;
-  align-items: center; /* Center vertically */
+  align-items: center;
   margin-bottom: 0px;
-  padding: 10px; /* Adjust padding as needed */
+  padding: 10px;
   margin: 10px;
 }
 
 .navbar-selection > div {
-  flex: 1; /* Grow to fill the available space horizontally */
-  text-align: center; /* Center text horizontally */
+  flex: 1;
+  text-align: center;
   font-size: 20px;
 }
 
 .navbar-selection:hover {
-  color: aqua;
+  color: #66fcf1;
   cursor: pointer;
 }
