--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,4 +1,7 @@
 .profile {
+  /* position: relative;
+  right: 300px;
+  bottom: 175px; */
   display: flex;
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
@@ -13,4 +16,27 @@
   width: 500px; /* Set the desired width */
   height: 500px; /* Set the desired height */
   border-radius: 50%; /* Makes it round */
+}
+
+.your-ranks-header {
+  text-align: center;
+}
+
+.game-ranks-list {
+  width: 100%;
+  height: 200px;
+  overflow: auto;
+  border: 1px solid #111111;
+  background-color: #f9e4b7;
+  color: #111111;
+  text-align: center;
+  list-style-type: none;
+}
+
+.game-rank-list-item {
+  border-bottom: 1px solid #111111;
+}
+
+.your-posts-header {
+  text-align: center;
 }
