added quill to write component

--- a/src/components/Write/Write.css
+++ b/src/components/Write/Write.css
@@ -16,3 +16,10 @@
   height: 4%;
   font-size: 140%;
 }
+
+.quill-editor {
+  background-color: white;
+  color: black;
+  width: 70%;
+  height: 75%;
+}
