--- a/src/components/Write/Write.css
+++ b/src/components/Write/Write.css
@@ -30,12 +30,24 @@
 
 .button-container {
   padding-top: 100px;
+  margin-right: 385px;
   width: 100%;
+  height: 20%;
+  display: flex;
+  justify-content: end;
 }
 
 .save-button {
-  background-color: red;
-  z-index: 100;
-  width: 100%;
-  height: 50%;
+  background-color: green;
+  border-radius: 25%;
+  width: 75px;
+  height: 30px;
+}
+
+.post-button {
+  margin-left: 5px;
+  background-color: blue;
+  border-radius: 25%;
+  width: 75px;
+  height: 30px;
 }
